# InsightFlow

./: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.agents/.skills/insightflow-progress-tracker/: SKILL.md
.agents/.skills/insightflow-progress-tracker/references/: insightflow-roadmap.md
docs/: Implement Plan Draft.md  Project Overview.md
docs/progress/: PROGRESS.md
src/insightflow/: __init__.py  main.py
src/insightflow/agents/: graph.py  state.py
src/insightflow/agents/nodes/: __init__.py  answer.py
src/insightflow/api/: schemas.py
src/insightflow/api/routes/: health.py  query.py
src/insightflow/core/: config.py  exceptions.py  logging.py
src/insightflow/providers/: __init__.py  embeddings.py  llm.py
src/insightflow/rag/: __init__.py  ingestion.py  retrieval.py
src/insightflow/storage/: qdrant.py
tests/: __init__.py
tests/integration/: test_query_api.py
